--- a/src/Hyper/AdsBundle/Resources/views/Default/frame.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/frame.html.twig
@@ -1,8 +1,8 @@
-{% macro bannerWidget(bnr) %}
+{% macro bannerWidget(bnr, z) %}
 {% if bnr.type == 'text' %}
 
 {% elseif bnr.type == 'image' %}
-<a href="http://hyperreal.info/todo" title="{{ bnr.linkTitle }}">
+<a href="{{ url('banner_click', {'zoneId': z.id, 'bannerId': bnr.id}) }}" title="{{ bnr.linkTitle }}">
     <img src="{{ asset(bnr.fileUrl) }}" alt="{{ bnr.linkTitle }}" width="{{ bnr.width }}" height="{{ bnr.height }}">
 </a>
 {% endif %}
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="banner">
-        {{ _self.bannerWidget(banner) }}
+        {{ _self.bannerWidget(banner, zone) }}
     </div>
 </body>
 </html>
