--- a/src/Hyper/AdsBundle/Resources/views/Default/frame.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/frame.html.twig
@@ -2,7 +2,7 @@
 {% if bnr.type == 'text' %}
 
 {% elseif bnr.type == 'image' %}
-<a href="{{ url('banner_click', {'zoneId': z.id, 'bannerId': bnr.id}) }}" title="{{ bnr.linkTitle }}">
+<a href="{{ url('banner_click', {'zoneId': z.id, 'bannerId': bnr.id}) }}" target="_blank" title="{{ bnr.linkTitle }}">
     <img src="{{ asset(bnr.fileUrl) }}" alt="{{ bnr.linkTitle }}" width="{{ bnr.width }}" height="{{ bnr.height }}">
 </a>
 {% endif %}
