--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,7 +59,7 @@
         </div>
 
         <div id="footer" class="span-24">
-            {{ 'powered.by.acid'|trans({}, 'HyperAdsBundle') }} | <a href="https://github.com/fajka/AcidAdServer" class="github-fork">fork on github</a>
+            {{ 'powered.by.acid'|trans({}, 'HyperAdsBundle') }} | <a href="https://github.com/hyperreal/AcidAdServer" class="github-fork">fork on github</a>
         </div>
 
     </div>
