--- a/src/Hyper/AdsBundle/Resources/views/Advertiser/edit.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Advertiser/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends "::base.html.twig" %}
 {% block title %}
-{{ 'edit.advertiser'|trans({'advertiserName': entity.name}, 'HyperAdsBundle') }}
+{{ 'edit.advertiser'|trans({'advertiserName': entity.username}, 'HyperAdsBundle') }}
 {% endblock %}
 {% block body %}
-<h1>{{ 'edit.advertiser'|trans({'advertiserName': entity.name}, 'HyperAdsBundle') }}</h1>
+<h1>{{ 'edit.advertiser'|trans({'advertiserName': entity.username}, 'HyperAdsBundle') }}</h1>
 
 <form action="{{ path('admin_advertiser_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
     {{ form_widget(edit_form) }}
