--- a/src/Hyper/AdsBundle/Resources/views/Advertiser/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Advertiser/index.html.twig
@@ -19,7 +19,7 @@
     {% for entity in entities %}
     <tr>
         <td><a href="{{ path('admin_advertiser_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-        <td>{{ entity.name }}</td>
+        <td>{{ entity.username }}</td>
         <td>{{ entity.email }}</td>
         <td>
             <ul>
