--- a/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
@@ -3,8 +3,27 @@
 {{ '__welcome'|trans({}, 'HyperAdsBundle') }}
 {% endblock %}
 {% block body %}
-<blockquote class="span-7 push-2">Many a small thing has been made large by the right kind of advertising.
-    <br/>
-    <span class="right">&mdash; Mark Twain</span>
-</blockquote>
+<div class="span-24 last">
+    <blockquote class="push-2 span-7">Many a small thing has been made large by the right kind of advertising.
+        <br/>
+        <span class="right">&mdash; Mark Twain</span>
+    </blockquote>
+</div>
+
+<div id="actions" class="prepend-top append-bottom span-7 last">
+{% if is_granted("ROLE_USER") %}
+    <div class="span-10">
+        <a href="{{ url('user_banner_new') }}">{{ 'banner.buy'|trans({}, 'HyperAdsBundle') }}</a>
+    </div>
+    <div class="span-10">
+        <a href="{{ url('user_banner_new') }}">{{ 'announcement.buy'|trans({}, 'HyperAdsBundle') }}</a>
+    </div>
+    <div class="span-4 last">
+        <a href="{{ url('user_banner_new') }}">{{ 'announcement.free.add'|trans({}, 'HyperAdsBundle') }}</a>
+    </div>
+{% elseif is_granted("ROLE_ADMIN") %}
+    admin
+{% endif %}
+</div>
+
 {% endblock %}
