--- a/src/Hyper/AdsBundle/Resources/views/Banner/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Banner/index.html.twig
@@ -31,12 +31,12 @@
             <ul>
                 <li>
                     <a href="{{ path('admin_banner_show', { 'id': entity.id }) }}">
-                        {{ '__show'|trans({}, 'HyperAdsBundle') }}
+                        {{ 'show'|trans({}, 'HyperAdsBundle') }}
                     </a>
                 </li>
                 <li>
                     <a href="{{ path('admin_banner_edit', { 'id': entity.id }) }}">
-                        {{ '__edit'|trans({}, 'HyperAdsBundle') }}
+                        {{ 'edit'|trans({}, 'HyperAdsBundle') }}
                     </a>
                 </li>
             </ul>
