--- a/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 {% block title %}
-{{ '__welcome'|trans({}, 'HyperAdsBundle') }}
+{{ 'welcome'|trans({}, 'HyperAdsBundle') }}
 {% endblock %}
 {% block body %}
 <div class="span-20 last">
