--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/list.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/list.html.twig
@@ -31,6 +31,11 @@
             {% if banner.paid or banner.paidTo %}
                 <br /><a href="{{ url('user_banner_payments', {'bannerId': banner.id}) }}">Lista płatności</a>
             {% endif %}
+            {% if banner.orders|length > 0 %}
+                <br /><a href="{{ url('user_banner_payments', {'bannerId': banner.id}) }}">
+                    {{ 'payments.list'|trans({}, 'HyperAdsBundle') }}
+                </a>
+            {% endif %}
         </td>
     </tr>
     {% endfor %}
