--- a/src/Hyper/AdsBundle/Resources/views/Zone/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Zone/index.html.twig
@@ -39,12 +39,12 @@
             <ul>
                 <li>
                     <a href="{{ path('admin_zone_show', { 'id': entity.id }) }}">
-                        {{ '__show'|trans({}, 'HyperAdsBundle') }}
+                        {{ 'show'|trans({}, 'HyperAdsBundle') }}
                     </a>
                 </li>
                 <li>
                     <a href="{{ path('admin_zone_edit', { 'id': entity.id }) }}">
-                        {{ '__edit'|trans({}, 'HyperAdsBundle') }}
+                        {{ 'edit'|trans({}, 'HyperAdsBundle') }}
                     </a>
                 </li>
             </ul>
