--- a/src/Hyper/AdsBundle/Resources/views/Advertiser/show.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Advertiser/show.html.twig
@@ -38,13 +38,13 @@
     </li>
     <li>
         <a href="{{ path('admin_advertiser_edit', { 'id': entity.id }) }}">
-            {{ '__edit'|trans({}, 'HyperAdsBundle') }}
+            {{ 'edit'|trans({}, 'HyperAdsBundle') }}
         </a>
     </li>
     <li>
         <form action="{{ path('admin_advertiser_delete', { 'id': entity.id }) }}" method="post">
             {{ form_widget(delete_form) }}
-            <button type="submit">{{ '__delete'|trans({}, 'HyperAdsBundle') }}</button>
+            <button type="submit">{{ 'delete'|trans({}, 'HyperAdsBundle') }}</button>
         </form>
     </li>
 </ul>
