--- a/src/Hyper/AdsBundle/Resources/views/Page/index.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/Page/index.html.twig
@@ -25,12 +25,12 @@
             <ul>
                 <li>
                     <a href="{{ path('admin_page_show', { 'id': entity.id }) }}">
-                        {{ '__show'|trans({}, 'HyperAdsBundle') }}
+                        {{ 'show'|trans({}, 'HyperAdsBundle') }}
                     </a>
                 </li>
                 <li>
                     <a href="{{ path('admin_page_edit', { 'id': entity.id }) }}">
-                        {{ '__edit'|trans({}, 'HyperAdsBundle') }}
+                        {{ 'edit'|trans({}, 'HyperAdsBundle') }}
                     </a>
                 </li>
             </ul>
