--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,7 +23,8 @@
                     {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
                 </a>
                 {% else %}
-                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a> |
+                <a href="{{ path('fos_user_registration_register') }}">{{ 'layout.register'|trans({}, 'FOSUserBundle') }}</a>
                 {% endif %}
             </div>
             <h1 id="logo" class="span-6 last">
