--- a/app/Resources/FOSUserBundle/views/Resetting/reset_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/reset_content.html.twig
@@ -1,4 +1,4 @@
-<form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="fos_user_resetting_reset">
+<form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="fos_user_resetting_reset user-form">
     {{ form_widget(form) }}
     <div>
         <input type="submit" value="{{ 'resetting.reset.submit'|trans({}, 'FOSUserBundle') }}" />
