--- a/app/Resources/FOSUserBundle/views/Group/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Group/edit_content.html.twig
@@ -1,4 +1,4 @@
-<form action="{{ path('fos_user_group_edit', {'groupname': groupname} ) }}" {{ form_enctype(form) }} method="POST" class="fos_user_group_edit">
+<form action="{{ path('fos_user_group_edit', {'groupname': groupname} ) }}" {{ form_enctype(form) }} method="POST" class="fos_user_group_edit user-form">
     {{ form_widget(form) }}
     <div>
         <input type="submit" value="{{ 'group.edit.submit'|trans([], 'FOSUserBundle') }}" />
