--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -91,7 +91,7 @@
         </div>
 
     </div>
-
+        <script src="{{ asset("components/jquery/jquery.min.js") }}" type="text/javascript"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
