--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZone.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/payInZone.html.twig
@@ -12,11 +12,23 @@
     {{ 'pay.for.banner.in.zone.info'|trans({'%banner%': banner.title, '%zone%': zone}, 'HyperAdsBundle') }}
 </div>
 
-<form action="{{ url('user_banner_pay_in_zone_save', {'bannerId': banner.id, 'zoneId': zone.id}) }}" method="post">
+<form action="{{ url('user_banner_pay_in_zone_save', {'bannerId': banner.id, 'zoneId': zone.id}) }}" method="post" id="payment-form">
     {{ form_widget(form) }}
+    <div id="days-info" class="box hide span-5 left"></div>
     <div class="buttons">
         <input type="submit" value="{{ 'next'|trans({}, 'HyperAdsBundle') }}"/>
     </div>
 </form>
 
+{% endblock %}
+
+{% block javascripts %}
+<script type="text/javascript" src="{{ asset('components/mustache/mustache.js') }}"></script>
+{% raw %}
+<script type="text/html" id="price-tpl">
+    Liczba dni do zapłaty: <strong>{{days}}</strong><br/>
+    Koszt: <strong>{{price}} {{currency}}</strong>
+</script>
+{% endraw %}
+<script type="text/javascript" src="{{ asset("bundles/hyperads/js/payment.js") }}"></script>
 {% endblock %}
