--- a/src/Hyper/AdsBundle/Resources/views/UserBanner/list.html.twig
+++ b/src/Hyper/AdsBundle/Resources/views/UserBanner/list.html.twig
@@ -1,20 +1,20 @@
 {% extends "::base.html.twig" %}
 
 {% block title %}
-{{ 'your.banners'|trans({}, 'HyperAdsBundle') }}
+{{ 'your.banners'|babylon }}
 {% endblock %}
 
 {% block body %}
-<h1>{{ 'your.banners'|trans({}, 'HyperAdsBundle') }}</h1>
+<h1>{{ 'your.banners'|babylon }}</h1>
 
 {% if banners|length > 0 %}
 <table class="records-list">
     <thead>
     <tr>
-        <th>{{ 'id'|trans({}, 'HyperAdsBundle') }}</th>
-        <th>{{ 'title'|trans({}, 'HyperAdsBundle') }}</th>
-        <th>{{ 'enabled.in.zones'|trans({}, 'HyperAdsBundle') }}</th>
-        <th>{{ 'actions'|trans({}, 'HyperAdsBundle') }}</th>
+        <th>{{ 'id'|babylon }}</th>
+        <th>{{ 'title'|babylon }}</th>
+        <th>{{ 'enabled.in.zones'|babylon }}</th>
+        <th>{{ 'actions'|babylon }}</th>
     </tr>
     </thead>
     <tbody>
@@ -24,25 +24,22 @@
         <td>{{ banner.title }}</td>
         <td>
             {{ banner.zones|length }}
-            <br /><a href="{{ url('user_banner_zones', {'banner': banner.id }) }}">Sprawdź strefy</a>
+            <br /><a href="{{ url('user_banner_zones', {'banner': banner.id }) }}">{{ 'check.zones'|babylon }}</a>
         </td>
         <td>
             <a href="{{ url('user_banner_edit', {'banner': banner.id }) }}}">Edytuj</a>
-                <br /><a href="{{ url('user_banner_payments', {'bannerId': banner.id}) }}">Lista płatności</a>
-                <br /><a href="{{ url('user_banner_payments', {'bannerId': banner.id}) }}">
-                    {{ 'payments.list'|trans({}, 'HyperAdsBundle') }}
-                </a>
+            <br /><a href="{{ url('user_banner_payments', {'bannerId': banner.id}) }}">{{ 'payments.list'|babylon }}</a>
         </td>
     </tr>
     {% endfor %}
     </tbody>
 </table>
 {% else %}
-    <div class="notice message">Brak bannerów</div>
+    <div class="notice message">{{ 'empty.banners.list'|babylon }}</div>
 {% endif %}
 
 <div class="additional-links">
-    <a href="{{ url('user_banner_new') }}">{{ 'add.banner'|trans({}, 'HyperAdsBundle') }}</a>
+    <a href="{{ url('user_banner_new') }}">{{ 'add.banner'|babylon }}</a>
 </div>
 
 {% endblock %}
